fix(instance) adjust instance detail panel spacing

--- a/src/sass/_instance_detail_panel.scss
+++ b/src/sass/_instance_detail_panel.scss
@@ -20,10 +20,6 @@
     max-width: 10rem;
   }
 
-  .last-used {
-    padding-bottom: 1.25rem !important;
-  }
-
   tr:last-child {
     border: 0;
   }
